# Skibidi-Wallet

./: Cargo.toml
.github/workflows/: rust-ci.yml
server/: Cargo.toml  wallet.rest
server/src/: main.rs
server/src/handler/: mod.rs  wallet_handler.rs
server/src/model/: wallet_model.rs
server/src/routes/: health.rs  mod.rs  wallet_route.rs
server/src/wallet/: mod.rs
src/wallet/: builder.rs  keys.rs
